--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -178,42 +178,86 @@
 
 }
 
-/* ----------------- 1024 -------------------- */
-
+/* -------------------- 1024 -------------------- */
 
 @media only screen and (max-width:1024px) {
 
+	#clientes img {
+	    width: 155px;
+	}
 
 }
 
-
-/* ----------------- 1023  -------------------- */
-
+/* -------------------- 1023 -------------------- */
 
 @media only screen and (max-width:1023px) {
 
-
 }
 
-
-/* ----------------- 980  -------------------- */
-
+/* -------------------- 980 -------------------- */
 
 @media only screen and (max-width: 980px){
 
-	
 }
 
-
-/* ----------------- 800  -------------------- */
-
-
+/* -------------------- 800 -------------------- */
 
 @media only screen and (max-width:800px) {
+	
+	header {
+	    border-bottom: 5px solid #c80e06;
+	    height: 110px;
+	    padding: 10px 25px;
+	}
 
+	header > nav > a > img {
+    	width: 250px;
+	}
+
+	header > nav > ul {
+	    float: right;
+	    margin: 75px 0 0;
+	    padding: 0;
+	}
+
+	header > nav > ul > li > a {
+	    color: #000000;
+	    font-size: 18px;
+	    font-weight: lighter;
+	    margin-left: 50px;
+	    text-decoration: none;
+	    text-transform: lowercase;
+	}
+
+	h1 {
+	    color: #c80e06;
+	    font-size: 30px;
+	    font-weight: lighter;
+	    margin: 0 auto;
+	    padding: 100px;
+	}
+
+	.half > p {
+	    font-size: 20px;
+	    font-weight: lighter;
+	    line-height: 35px;
+	    margin: 0 auto;
+	    padding: 100px;
+	}
+
+	.last > p {
+	    font-size: 20px;
+	    font-weight: lighter;
+	    line-height: 35px;
+	    margin: 0 auto;
+	    padding: 100px;
+	}
+
+	#clientes img {
+	    width: 115px;
+	}
 
 }
-
 
 /* ------------- 810 mobile ------------------ */
 
